Fixes for nav on mobile

--- a/wp-content/themes/hmr-theme/assets/css/less/bootstrap/navs.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/bootstrap/navs.less
@@ -342,7 +342,7 @@
       text-align:left;
       padding:0;
       a {
-        padding:20px 0 15px 0;
+        padding:20px 0 35px 0;
         display:block;
         border-bottom:1px solid @blue;
         &:after {
